# PDLSM-FEM_mpi

./: .gitignore  README.md
HeaderFiles/Solver/: Matrix.h  Vector.h  calMatrixOperations.h  datModel.h  dataLev2.h  fioFile.h  pdBlock.h  pdDof.h  pdFamily.h  pdGaussPt.h  pdGeomP.h  pdMaterial.h  pdNode.h  pdPDBEs.h  pdPointBC.h  pdReacForceEle.h  pdReactionForceNode.h  pdVaryEssentialBCs.h  pdfemEleBrick8N.h  pdfemEleLine2N.h  pdfemEleQuad4N.h  pdfemEleTetra4N.h  pdfemEleTri3N.h  pdfemEles.h  pdfemEssentialBCs.h  pdfemNaturalBCs.h  pdfemPostProcess.h  pdfem_mpi.h  pdsolve.h
JOSS_paper/: paper.bib  paper.md
SourceFiles/: main.cpp
SourceFiles/Solver/: Matrix.cpp  Vector.cpp  calMatrixOperations.cpp  datModel.cpp  dataLev2.cpp  fioFile.cpp  pdBlock.cpp  pdDof.cpp  pdFamily.cpp  pdGaussPt.cpp  pdGeomP.cpp  pdMaterial.cpp  pdNode.cpp  pdPDBEs.cpp  pdPointBC.cpp  pdReacForceEle.cpp  pdReactionForceNode.cpp  pdVaryEssentialBCs.cpp  pdfemEleBrick8N.cpp  pdfemEleLine2N.cpp  pdfemEleQuad4N.cpp  pdfemEleTetra4N.cpp  pdfemEleTri3N.cpp  pdfemEles.cpp  pdfemEssentialBCs.cpp  pdfemNaturalBCs.cpp  pdfemPostProcess.cpp  pdfem_mpi.cpp  pdsolve.cpp
cmake/: CMakeLists.txt  FindMKL.cmake  FindMPI.cmake
cmake/Macros/: subdirectoryList.cmake
examples/DCT/: DCT.lis  DCT_quasiStatic_FC1.in
examples/DiagPlate/: DiagPlate.lis  DiagPlate_quasistatic_FC1.in  DiagPlate_quasistatic_FC2.in  DiagPlate_static.in  static_cmd.in
examples/box/: boxVpd4.lis  boxVpd4_static.in  boxVpd4_static.vtk
examples/boxCrack/: boxCrack_static.in
examples/boxHole/: boxHole_static.vtk  boxHolecmd_static.in
examples/plateCrack/: platCrack.lis  platCrack_NewMarkOFF_FC2.in  platCrack_NewMarkON_FC2.in  platCrack_Static.in  platCrack_quasiStatic_FC1.in  platCrack_quasiStatic_FC2.in  plateCrack_static.vtk
examples/plateHole/: platHolePDFEM.lis  platHolePDFEM_static.vtk  (+2 more)
